--- a/css/general.css
+++ b/css/general.css
@@ -17,11 +17,157 @@ html {
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	text-size-adjust: 100%;
-    
+    font-family: "Andale Mono", AndaleMono, monospace;
     font-size: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 img {
-	width: 100%;
+	width: 50%;
     display: block;
+    margin: 0 auto;
+}
+
+body {
+    background: #eee;
+}
+
+.billboard {
+    color: #1e1;
+    overflow: hidden;
+    background-color: #200;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 95%;
+    background-image: url(../images/logo.svg);
+    padding: 5rem 5% 0;
+    text-align: center;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-width: thick;
+    border-style: solid;
+    border-color: #f00;
+    border-top-color: #f66;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, .6);
+    margin: 0 2.5%;
+}
+
+h1 {
+    margin: 0 -10%;
+    font-weight: bold;
+    font-size: 1.5rem;
+    text-align: center;
+    line-height: 3rem;
+    text-shadow: .15rem .15rem .05rem rgba(0, 0, 0, .5);
+    background-color: rgba(255, 255, 255, .5);
+}
+
+h2 {
+    text-align: center;
+    border-bottom: solid;
+}
+
+h3 {
+    font-size: 1.5rem;
+    line-height: 0rem
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    margin: 1.5rem 5%;
+
+}
+
+#roster {
+    margin: 0 5%;
+    padding: 0 0 3rem 5%;
+    background-color: #e00;
+    overflow: hidden;
+    border-bottom-right-radius: 40px;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, .6);
+}
+
+details p {
+    margin-bottom: 3rem;
+    text-align:
+    
+}
+
+#box {
+    position:sticky;
+    color: #eee;
+    padding: 0 5% 3rem;
+    margin-right:10%;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: #000;
+    border: solid #333;
+}
+
+details summary::-webkit-details-marker { 
+    display:none; 
+}
+
+summary {
+    cursor: pointer;
+    font-weight: bold;
+    color: #141;
+    background-image: url(../images/pokeball.svg);
+    background-repeat: no-repeat;
+    background-size: 3rem;
+    background-color: #ded;
+    border-style: solid;
+    border-width: normal;
+    border-color: #fff;
+    width: 90%;
+    height: 3.25rem;
+    margin: .5rem 8px;
+    border-bottom-right-radius: 40px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 40px;
+    text-align: center;
+    overflow: hidden;
+    min-width: 180px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);
+    position: sticky;
+    padding: 1rem;
+}
+
+summary:hover {
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 1);
+}
+   
+footer {
+    background-color: #117;
+    margin: 1.5rem 5%;
+    color: #fff;
+    padding: 3rem 5% 0.5rem;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 40px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, .6);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: #e44;
+}
+
+figcaption {
+    text-align: center;
+    margin: 2.5rem 0 0;
 }
