--- a/css/general.css
+++ b/css/general.css
@@ -30,7 +30,7 @@ img {
 }
 
 body {
-    background: #eee;
+    background: #ddd;
 }
 
 .billboard {
@@ -39,15 +39,12 @@ body {
     background-color: #200;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 95%;
+    background-size: 90%;
     background-image: url(../images/logo.svg);
     padding: 5rem 5% 0;
     text-align: center;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-width: thick;
-    border-style: solid;
-    border-color: #f00;
+    border-radius: 0 0 20px 20px;
+    border: thick solid #f00;
     border-top-color: #f66;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, .6);
     margin: 0 2.5%;
@@ -79,7 +76,6 @@ ul {
 
 li {
     margin: 1.5rem 5%;
-
 }
 
 #roster {
@@ -87,10 +83,7 @@ li {
     padding: 0 0 3rem 5%;
     background-color: #e00;
     overflow: hidden;
-    border-bottom-right-radius: 40px;
-    border-top-left-radius: 40px;
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-radius: 40px 10px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, .6);
 }
 
@@ -103,10 +96,7 @@ details p {
     color: #eee;
     padding: 0 5% 3rem;
     margin-right:10%;
-    border-bottom-right-radius: 5px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
     background-color: #000;
     border: solid #333;
 }
@@ -124,16 +114,13 @@ summary {
     background-size: 3rem;
     background-color: #ded;
     border: solid #fff;
-    width: 90%;
     height: 3.25rem;
-    margin: .5rem 8px;
+    margin: .5rem auto;
     border-bottom-right-radius: 40px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 10px;
     border-top-right-radius: 40px;
     text-align: center;
-    overflow: hidden;
-    min-width: 180px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .2);
     padding: 1rem;
 }
@@ -142,10 +129,10 @@ summary:hover {
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 1);
 }
-   
+
 footer {
     background-color: #117;
-    margin: 1.5rem 5%;
+    margin: 1.5rem 5% 0;
     color: #fff;
     padding: 3rem 5% 0.5rem;
     border-top-left-radius: 20px;
