--- a/css/general.css
+++ b/css/general.css
@@ -81,7 +81,7 @@ li {
 #roster {
     margin: 0 5%;
     padding: 0 0 3rem 5%;
-    background-color: #e00;
+    background-color: #d00;
     overflow: hidden;
     border-radius: 40px 10px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, .6);
