--- a/css/general.css
+++ b/css/general.css
@@ -44,7 +44,7 @@ body {
     padding: 5rem 5% 0;
     text-align: center;
     border-radius: 0 0 20px 20px;
-    border: thick solid #f00;
+    border: thick solid #d00;
     border-top-color: #f66;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, .6);
     margin: 0 2.5%;
