--- a/css/general.css
+++ b/css/general.css
@@ -40,6 +40,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 90%;
+    width: 95%;
     background-image: url(../images/logo.svg);
     padding: 5rem 5% 0;
     text-align: center;
@@ -48,6 +49,7 @@ body {
     border-top-color: #f66;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, .6);
     margin: 0 2.5%;
+    
 }
 
 h1 {
@@ -94,9 +96,9 @@ details p {
 .box {
     position:relative;
     color: #eee;
-    padding: 0 5% 3rem;
+    padding: 3rem 5% 3rem;
     margin-right:10%;
-    border-radius: 5px;
+    border-radius: 50%/10%;
     background-color: #000;
     border: solid #333;
 }
